--- a/app/assets/stylesheets/settings/_breakpoints.scss
+++ b/app/assets/stylesheets/settings/_breakpoints.scss
@@ -1,4 +1,5 @@
 $phone: "screen and (max-device-width: 960px)";
+$tablet: "screen and (min-device-width: 768px) and (max-device-width: 1024px)";
 
 // Device specific
 $iphone6: "screen and (min-device-width: 375px) and (max-device-width: 667px)";
